--- a/package.json
+++ b/package.json
@@ -8,11 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
-    "nodemailer": "^6.9.7"
-  },
-  "devDependencies": {
-    "dotenv": "^16.3.1"
+    "sqlite3": "^5.1.6"
   },
   "author": "",
   "license": "ISC"
